SimGrid (3.6) unstable; urgency=low

 MSG
 * Change the prototypes of action replay. Sorry for inconvenience,
   but this is really more efficient this way.

 SURF
 * New model for multi-core CPUs. You can now use the core attribute to
   precise the number of cores of a host. This is a basic model. Every
   process running on the host receive at most the power provided in
   the DTD (throughput<=power). Total throughput of process cannot exceed
   power * num_cores.
 * New peer tag. This peer tag creates a tiny AS comprising a host and a
   router linked by an up-link and a down-link (possibly asymmetrical).
   This kind of pattern allows to easily build last-mile model style platforms.
   Aggregating such patterns in a rule-based AS is thus the technique of
   choice for modeling large peer-to-peer/volunteer computing/cloud platforms.
 * New model for Vivaldi routing. We transformed the Vivaldi network model
   into a Vivaldi routing model (based on the rule-based model). This allows to
   combine Vivaldi based latencies with last-mile platforms.

 Simix
 * Completely rewrote this module to allow parallel execution.
 * Introduce a new context factory "raw", highly inspirated from the
   context factory, but using manually crafted functions in assembly to
   do the work in an efficient manner.

 XBT
 * Add a new function xbt_dynar_to_array that transforms a dynar into a
   NULL-terminated array. This may solve backward compatibility issues
   due to the change to return type of SD_Simulate. See also:
   http://lists.gforge.inria.fr/pipermail/simgrid-user/2010-December/002206.html

 INSTR
 * New configuration options
   Options triva/categorized and triva/uncategorized can be used to generate
   graph configuration files for Triva visualization tool.
 * Configuration option tracing/platform is renamed to tracing/categorized
 * XBT logging makes tracing error checks easier, new root log hierarchy: instr
 * New TRACE_user_link_variable interface: